@@ -13,10 +13,9 @@ import org.junit.Test;
 import com.devonfw.cobigen.api.constants.ConfigurationConstants;
 
 /**
- * Tests the usage of the generate command. Warning: Java 9+ requires -Djdk.attach.allowAttachSelf=true to be present
- * among JVM startup arguments.
+ * Tests the usage of the generate command.
  */
-public class GenerateCommandTest extends AbstractCliTest {
+public class GenerateCommandIT extends AbstractCliTest {
 
   /** Test resources root path */
   private static String testFileRootPath = "src/test/resources/testdata/";
